# first-agent-with-agno

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
1_deploy/: exemplo2.py  exemplo4.py
1_deploy/tmp/: agent.db
1_deploy/tmp/chromadb/: chroma.sqlite3
